--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.23.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "tailwind": "^4.0.0",
     "web-vitals": "^4.0.1"
   },
   "devDependencies": {
