--- a/Client/package.json
+++ b/Client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/paypal-js": "^8.0.5",
+    "@paypal/react-paypal-js": "^8.3.0",
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
