--- a/dashboard/.eslintrc.json
+++ b/dashboard/.eslintrc.json
@@ -1,3 +1,4 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next",
+  "presets": ["next/babel", "@babel/preset-env", "@babel/preset-react"]
 }
