--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,7 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-sortablejs": "^6.1.4",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "tailwind": "^4.0.0",
