--- a/Client/package.json
+++ b/Client/package.json
@@ -21,6 +21,7 @@
     "react-sortablejs": "^6.1.4",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "sortablejs": "^1.15.2",
     "tailwind": "^4.0.0",
     "toaster": "^0.1.2",
     "web-vitals": "^4.0.1"
