--- a/Client/package.json
+++ b/Client/package.json
@@ -23,6 +23,7 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.5",
     "tailwind": "^4.0.0",
     "toaster": "^0.1.2",
     "web-vitals": "^4.0.1"
