--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "date-fns": "^3.6.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
