--- a/Client/package.json
+++ b/Client/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "rollup -c",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -34,7 +34,8 @@
     "sortablejs": "^1.15.2",
     "tailwind": "^4.0.0",
     "toaster": "^0.1.2",
-    "web-vitals": "^4.0.1"
+    "web-vitals": "^4.0.1",
+    "rollup": "^2.56.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -48,5 +49,8 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
